--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,14 @@
+buildscript { 
+repositories { 
+         jcenter() // or mavenCentral() 
+     } 
+ 
+ 
+     dependencies { 
+         classpath 'com.android.tools.build:gradle:1.5.0' 
+     } 
+ } 
+
 apply plugin: 'com.android.application'
 
 android {
